feat: all routes revised with queueName part of routed, updated README and bump version to 0.0.2
